Prevents shifting line numbers when break line happen

--- a/css/linenumbering.css
+++ b/css/linenumbering.css
@@ -23,7 +23,7 @@
 /* Line numbering */
 .kix-lineview.numbered::before {
   content: attr(ln-number);
-  position: relative;
+  position: absolute;
   left: -4em;
   width: 2em;
   text-align: right;
